kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auramart
  labels:
    name: auramart
    environment: production
