kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auramart-ingress
  namespace: auramart
  annotations:
    alb.ingress.kubernetes.io/group.name: auramat-app-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:362954626868:certificate/7194a7ee-a881-4c15-8353-7067f096d93d
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: easyshop.letsdeployit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auramart-service
            port:
              number: 80
